@@ -16,6 +16,7 @@
         <Selenium.version>4.28.1</Selenium.version>
         <TestNG.version>7.10.2</TestNG.version>
         <AssertJCore.version>3.26.3</AssertJCore.version>
+        <JsonAssert.version>1.5.3</JsonAssert.version>
         <ApachePOI.version>5.3.0</ApachePOI.version>
         <Jackson.version>2.18.2</Jackson.version>
         <Extend.version>5.1.2</Extend.version>
@@ -196,6 +197,14 @@
             <version>${RestAssured.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
+        <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <version>${JsonAssert.version}</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -365,9 +374,9 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>23</source>
-                <target>23</target>
-                <compilerArgs>--enable-preview</compilerArgs>
+                <source>17</source>
+                <target>17</target>
+<!--                <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
             </configuration>
         </plugin>
 
